--- a/html/la-maquina.html
+++ b/html/la-maquina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Máquina - Humboldt HM-5750</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles 3.css">
+    <link rel="stylesheet" href="css/styles3.css">
 </head>
 <body>
     <header>
@@ -51,7 +51,7 @@
             <!-- Sección de imagen y características lado a lado -->
             <div class="image-features-container">
                 <div class="machine-image-side">
-                    <img src="imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
+                    <img src="imagenes/imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
                     <div class="image-caption">
                         <p><i class="fas fa-info-circle"></i> Máquina de Corte Directo Humboldt HM-5750 - Vista frontal</p>
                     </div>
