--- a/html/partes.html
+++ b/html/partes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partes - Humboldt HM-5750</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -41,7 +41,7 @@
                 <div class="parts-diagram">
                     <h3>Diagrama de Partes</h3>
                     <div class="diagram-placeholder">
-                        <img src="imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
+                        <img src="imagenes/imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
                         <p>Diagrama de partes de la HM-5750</p>
                     </div>
                 </div>
