--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     
     <nav>
         <ul>
-            <li><a href="html/la-maquina.html"><i class="fas fa-cogs"></i> La Máquina</a></li>
-            <li><a href="html/partes.html"><i class="fas fa-toolbox"></i> Partes</a></li>
-            <li><a href="html/protocolo.html"><i class="fas fa-clipboard-list"></i> Protocolo</a></li>
-            <li><a href="html/preparacion.html"><i class="fas fa-vial"></i> Preparación</a></li>
-            <li><a href="html/simulacion.html"><i class="fas fa-play-circle"></i> Simulación</a></li>
-            <li><a href="html/resultados.html"><i class="fas fa-chart-line"></i> Resultados</a></li>
+            <li><a href="la-maquina.html"><i class="fas fa-cogs"></i> La Máquina</a></li>
+            <li><a href="partes.html"><i class="fas fa-toolbox"></i> Partes</a></li>
+            <li><a href="protocolo.html"><i class="fas fa-clipboard-list"></i> Protocolo</a></li>
+            <li><a href="preparacion.html"><i class="fas fa-vial"></i> Preparación</a></li>
+            <li><a href="simulacion.html"><i class="fas fa-play-circle"></i> Simulación</a></li>
+            <li><a href="resultados.html"><i class="fas fa-chart-line"></i> Resultados</a></li>
         </ul>
     </nav>
     
