--- a/partes.html
+++ b/partes.html
@@ -41,7 +41,7 @@
                 <div class="parts-diagram">
                     <h3>Diagrama de Partes</h3>
                     <div class="diagram-placeholder">
-                        <img src="imagenes/imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
+                        <img src="imagen/imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
                         <p>Diagrama de partes de la HM-5750</p>
                     </div>
                 </div>
