--- a/la-maquina.html
+++ b/la-maquina.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Máquina - Humboldt HM-5750</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/styles3.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles2.css">
 </head>
 <body>
     <header>
@@ -23,6 +24,7 @@
     
     <nav>
         <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
             <li><a href="la-maquina.html" class="active"><i class="fas fa-cogs"></i> La Máquina</a></li>
             <li><a href="partes.html"><i class="fas fa-toolbox"></i> Partes</a></li>
             <li><a href="protocolo.html"><i class="fas fa-clipboard-list"></i> Protocolo</a></li>
@@ -36,7 +38,6 @@
         <section class="section active">
             <!-- Sección Hero mejorada -->
             <div class="hero-section">
-                <div class="hero-background"></div>
                 <div class="hero-content">
                     <h1>Máquina de Corte Directo Humboldt HM-5750</h1>
                     <p>Equipo de pesos muertos para determinar la resistencia al corte de suelos mediante el método de corte directo</p>
@@ -150,7 +151,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
