--- a/partes.html
+++ b/partes.html
@@ -6,6 +6,7 @@
     <title>Partes - Humboldt HM-5750</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles3.css">
 </head>
 <body>
     <header>
@@ -23,6 +24,7 @@
     
     <nav>
         <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
             <li><a href="la-maquina.html"><i class="fas fa-cogs"></i> La Máquina</a></li>
             <li><a href="partes.html" class="active"><i class="fas fa-toolbox"></i> Partes</a></li>
             <li><a href="protocolo.html"><i class="fas fa-clipboard-list"></i> Protocolo</a></li>
@@ -41,7 +43,7 @@
                 <div class="parts-diagram">
                     <h3>Diagrama de Partes</h3>
                     <div class="diagram-placeholder">
-                        <img src="imagen/imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
+                        <img src="imagenes/imagen1.png" alt="Máquina de Corte Directo Humboldt HM-5750" class="machine-image">
                         <p>Diagrama de partes de la HM-5750</p>
                     </div>
                 </div>
@@ -136,7 +138,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
