--- a/preparacion.html
+++ b/preparacion.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header class="main-header">
         <div class="header-content">
-            <div class="logo">
+            <div class="header-logo">
                 <i class="fas fa-tools"></i>
                 <span>HUMBOLDT</span>
             </div>
@@ -26,6 +26,10 @@
     <!-- Navigation -->
     <nav class="main-nav">
         <div class="nav-container">
+            <a href="index.html" class="nav-item">
+                <i class="fas fa-home"></i>
+                <span>Inicio</span>
+            </a>
             <a href="la-maquina.html" class="nav-item">
                 <i class="fas fa-cogs"></i>
                 <span>La Máquina</span>
@@ -227,6 +231,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
