Add new stylesheet and navigation script

--- a/simulacion.html
+++ b/simulacion.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulación - Humboldt HM-5750</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles3.css">
 </head>
-
 <body>
     <header>
         <div class="logo-container">
@@ -25,6 +24,7 @@
 
     <nav>
         <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
             <li><a href="la-maquina.html"><i class="fas fa-cogs"></i> La Máquina</a></li>
             <li><a href="partes.html"><i class="fas fa-toolbox"></i> Partes</a></li>
             <li><a href="protocolo.html"><i class="fas fa-clipboard-list"></i> Protocolo</a></li>
@@ -176,7 +176,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/navigation.js"></script>
     <script src="js/simulation.js"></script>
 </body>
-
 </html>
