Update resultados.html with new styles and values
Added new styles and updated parameter values in resultados.html.

--- a/resultados.html
+++ b/resultados.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultados - Humboldt HM-5750</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles3.css">
 </head>
-
 <body>
     <header>
         <div class="logo-container">
@@ -25,6 +24,7 @@
 
     <nav>
         <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
             <li><a href="la-maquina.html"><i class="fas fa-cogs"></i> La Máquina</a></li>
             <li><a href="partes.html"><i class="fas fa-toolbox"></i> Partes</a></li>
             <li><a href="protocolo.html"><i class="fas fa-clipboard-list"></i> Protocolo</a></li>
@@ -64,7 +64,7 @@
                             </div>
                             <div class="parameter-info">
                                 <h4>Cohesión (c)</h4>
-                                <div class="parameter-value" id="cohesionValue">0 kPa</div>
+                                <div class="parameter-value" id="cohesionValue">25 kPa</div>
                                 <p>Resistencia al corte independiente del esfuerzo normal</p>
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                             </div>
                             <div class="parameter-info">
                                 <h4>Ángulo de Fricción (φ)</h4>
-                                <div class="parameter-value" id="frictionAngleValue">0°</div>
+                                <div class="parameter-value" id="frictionAngleValue">30°</div>
                                 <p>Resistencia al corte dependiente del esfuerzo normal</p>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
                             </div>
                             <div class="parameter-info">
                                 <h4>Esfuerzo de Corte Máximo</h4>
-                                <div class="parameter-value" id="maxShearStressValue">0 kPa</div>
+                                <div class="parameter-value" id="maxShearStressValue">305 kPa</div>
                                 <p>Máxima resistencia al corte alcanzada</p>
                             </div>
                         </div>
@@ -103,7 +103,21 @@
                                 </tr>
                             </thead>
                             <tbody id="resultsTableBody">
-                                <!-- Los datos se llenarán dinámicamente -->
+                                <tr>
+                                    <td>100</td>
+                                    <td>125</td>
+                                    <td>3.5</td>
+                                </tr>
+                                <tr>
+                                    <td>200</td>
+                                    <td>215</td>
+                                    <td>3.8</td>
+                                </tr>
+                                <tr>
+                                    <td>300</td>
+                                    <td>305</td>
+                                    <td>4.2</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -154,7 +168,126 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="js/navigation.js"></script>
+    <script>
+        // Inicializar gráficos en la página de resultados
+        document.addEventListener('DOMContentLoaded', function() {
+            // Gráfico de esfuerzo vs deformación
+            const stressStrainChartCanvas = document.getElementById('stressStrainChart');
+            if (stressStrainChartCanvas) {
+                const ctx = stressStrainChartCanvas.getContext('2d');
+                new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: ['0', '0.5', '1.0', '1.5', '2.0', '2.5', '3.0', '3.5', '4.0', '4.5', '5.0'],
+                        datasets: [
+                            {
+                                label: 'Esfuerzo Normal: 100 kPa',
+                                data: [0, 45, 75, 95, 110, 120, 125, 125, 124, 122, 120],
+                                borderColor: '#1e3c72',
+                                backgroundColor: 'rgba(30, 60, 114, 0.1)',
+                                borderWidth: 2,
+                                fill: false,
+                                tension: 0.4
+                            },
+                            {
+                                label: 'Esfuerzo Normal: 200 kPa',
+                                data: [0, 65, 110, 140, 165, 185, 200, 210, 215, 214, 212],
+                                borderColor: '#dc3545',
+                                backgroundColor: 'rgba(220, 53, 69, 0.1)',
+                                borderWidth: 2,
+                                fill: false,
+                                tension: 0.4
+                            },
+                            {
+                                label: 'Esfuerzo Normal: 300 kPa',
+                                data: [0, 85, 145, 185, 220, 250, 275, 295, 305, 304, 302],
+                                borderColor: '#28a745',
+                                backgroundColor: 'rgba(40, 167, 69, 0.1)',
+                                borderWidth: 2,
+                                fill: false,
+                                tension: 0.4
+                            }
+                        ]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        scales: {
+                            x: {
+                                title: {
+                                    display: true,
+                                    text: 'Desplazamiento Horizontal (mm)'
+                                }
+                            },
+                            y: {
+                                title: {
+                                    display: true,
+                                    text: 'Esfuerzo de Corte (kPa)'
+                                },
+                                beginAtZero: true
+                            }
+                        }
+                    }
+                });
+            }
+            
+            // Gráfico de envolvente de falla
+            const failureEnvelopeChartCanvas = document.getElementById('failureEnvelopeChart');
+            if (failureEnvelopeChartCanvas) {
+                const ctx = failureEnvelopeChartCanvas.getContext('2d');
+                new Chart(ctx, {
+                    type: 'scatter',
+                    data: {
+                        datasets: [{
+                            label: 'Puntos de Falla',
+                            data: [
+                                {x: 100, y: 125},
+                                {x: 200, y: 215},
+                                {x: 300, y: 305}
+                            ],
+                            backgroundColor: '#1e3c72',
+                            pointRadius: 6
+                        }, {
+                            label: 'Envolvente de Falla',
+                            data: [
+                                {x: 0, y: 25},
+                                {x: 100, y: 125},
+                                {x: 200, y: 225},
+                                {x: 300, y: 325},
+                                {x: 400, y: 425}
+                            ],
+                            borderColor: '#dc3545',
+                            backgroundColor: 'rgba(220, 53, 69, 0.1)',
+                            borderWidth: 2,
+                            fill: false,
+                            showLine: true,
+                            pointRadius: 0
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        scales: {
+                            x: {
+                                title: {
+                                    display: true,
+                                    text: 'Esfuerzo Normal (kPa)'
+                                },
+                                beginAtZero: true
+                            },
+                            y: {
+                                title: {
+                                    display: true,
+                                    text: 'Esfuerzo de Corte (kPa)'
+                                },
+                                beginAtZero: true
+                            }
+                        }
+                    }
+                });
+            }
+        });
+    </script>
 </body>
-
 </html>
