--- a/preparacion.html
+++ b/preparacion.html
@@ -5,63 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preparación - Humboldt HM-5750</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- CAMBIO IMPORTANTE: Cargar styles.css primero -->
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles4.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="main-header">
-        <div class="header-content">
-            <div class="header-logo">
+    <!-- Usamos el mismo header que las otras páginas -->
+    <header>
+        <div class="logo-container">
+            <div class="logo">
                 <i class="fas fa-tools"></i>
-                <span>HUMBOLDT</span>
             </div>
-            <div class="header-title">
-                <h1>HM-5750</h1>
+            <div class="branding">
+                <h1>Humboldt HM-5750</h1>
                 <h2>Máquina de Corte Directo con Pesos Muertos</h2>
                 <p>Simulación educativa para ensayos geotécnicos - ASTM D3080, AASHTO T236, BS 1377.7</p>
             </div>
         </div>
     </header>
 
-    <!-- Navigation -->
-    <nav class="main-nav">
-        <div class="nav-container">
-            <a href="index.html" class="nav-item">
-                <i class="fas fa-home"></i>
-                <span>Inicio</span>
-            </a>
-            <a href="la-maquina.html" class="nav-item">
-                <i class="fas fa-cogs"></i>
-                <span>La Máquina</span>
-            </a>
-            <a href="partes.html" class="nav-item">
-                <i class="fas fa-toolbox"></i>
-                <span>Partes</span>
-            </a>
-            <a href="protocolo.html" class="nav-item">
-                <i class="fas fa-clipboard-list"></i>
-                <span>Protocolo</span>
-            </a>
-            <a href="preparacion.html" class="nav-item active">
-                <i class="fas fa-vial"></i>
-                <span>Preparación</span>
-            </a>
-            <a href="simulacion.html" class="nav-item">
-                <i class="fas fa-play-circle"></i>
-                <span>Simulación</span>
-            </a>
-            <a href="resultados.html" class="nav-item">
-                <i class="fas fa-chart-line"></i>
-                <span>Resultados</span>
-            </a>
-        </div>
+    <!-- Usamos la misma navegación -->
+    <nav>
+        <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
+            <li><a href="la-maquina.html"><i class="fas fa-cogs"></i> La Máquina</a></li>
+            <li><a href="partes.html"><i class="fas fa-toolbox"></i> Partes</a></li>
+            <li><a href="protocolo.html"><i class="fas fa-clipboard-list"></i> Protocolo</a></li>
+            <li><a href="preparacion.html" class="active"><i class="fas fa-vial"></i> Preparación</a></li>
+            <li><a href="simulacion.html"><i class="fas fa-play-circle"></i> Simulación</a></li>
+            <li><a href="resultados.html"><i class="fas fa-chart-line"></i> Resultados</a></li>
+        </ul>
     </nav>
 
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="content-container">
+    <div class="container">
+        <section class="section active">
             <!-- Hero Section -->
-            <section class="hero-section">
+            <div class="hero-section">
                 <div class="hero-content">
                     <h1 class="hero-title">
                         <i class="fas fa-vial"></i>
@@ -76,11 +55,11 @@
                         <div class="badge">BS 1377.7</div>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Methods Section -->
-            <section class="methods-section">
-                <h2 class="section-title">Métodos de Preparación de Muestras</h2>
+            <div class="methods-section">
+                <h2>Métodos de Preparación de Muestras</h2>
                 
                 <div class="methods-grid">
                     <!-- Muestra Inalterada -->
@@ -153,11 +132,11 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Compaction Process -->
-            <section class="compaction-section">
-                <h2 class="section-title">Proceso de Compactación</h2>
+            <div class="compaction-section">
+                <h2>Proceso de Compactación</h2>
                 <p class="section-subtitle">Para muestras remoldeadas, el proceso de compactación debe seguir estos pasos:</p>
                 
                 <div class="compaction-steps">
@@ -193,10 +172,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Important Notice -->
-            <section class="notice-section">
+            <div class="notice-section">
                 <div class="notice-card">
                     <div class="notice-header">
                         <i class="fas fa-exclamation-triangle"></i>
@@ -204,12 +183,11 @@
                     </div>
                     <p>El proceso de saturación (cuando se requiere) debe realizarse después de la compactación y antes del ensayo de corte. El tiempo de saturación varía según el tipo de suelo y debe seguir las especificaciones del estándar aplicable.</p>
                 </div>
-            </section>
-        </div>
-    </main>
+            </div>
+        </section>
+    </div>
 
-    <!-- Footer -->
-    <footer class="main-footer">
+    <footer>
         <div class="footer-content">
             <div class="footer-section">
                 <h4>Humboldt Mfg. Co.</h4>
